--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,14 +1,17 @@
 *,
 *::before,
 *::after {
-  
+  box-sizing: border-box;
 }
 
 html,
 body,
 .wrapper {
-  
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
+
 
 body {
  
