--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -14,12 +14,15 @@ body,
 
 
 body {
- 
-}
-
-.wrapper {
+    font-family: sans-serif;
+    background-color: #f9fbfd;
+  }
   
-}
+  .wrapper {
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 
 header {
   
